force-app/main/default/objects/ON24_Webinar_Attendance__c/ON24_Webinar_Attendance__c.object-meta.xml
<CustomObject>
    <label>ON24 Webinar Attendance</label>
    <nameField>
        <displayFormat>WA{00000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ON24 Webinar Attendance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>