force-app/main/default/objects/ON24_Webinar_Attendance__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ON24 Webinar Attendance</relationshipLabel>
    <relationshipName>ON24_Webinar_Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>