force-app/main/default/objects/ON24_Webinar_Attendance__c/fields/Appointment_Setter__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Setter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment Setter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ON24_Webinar_Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>