force-app/main/default/objects/ON24_Webinar_Attendance__c/fields/ENGAGEMENT__c.field-meta.xml
<CustomField>
    <fullName>ENGAGEMENT__c</fullName>
    <label>ENGAGEMENT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>