force-app/main/default/objects/ON24_Webinar_Attendance__c/fields/IP__c.field-meta.xml
<CustomField>
    <fullName>IP__c</fullName>
    <label>IP</label>
    <length>25</length>
    <type>Text</type>
</CustomField>