force-app/main/default/objects/ON24_Webinar_Attendance__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>ON24 Webinar Attendance</relationshipLabel>
    <relationshipName>ON24_Webinar_Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>