force-app/main/default/objects/ON24_Webinar_Attendance__c/fields/ON24ID__c.field-meta.xml
<CustomField>
    <fullName>ON24ID__c</fullName>
    <label>ON24ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>