force-app/main/default/objects/ON24_Webinar_Attendance__c/fields/ParentRecordID__c.field-meta.xml
<CustomField>
    <fullName>ParentRecordID__c</fullName>
    <label>ParentRecordID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>