force-app/main/default/objects/ON24_Webinar_Attendance__c/fields/Reg_Time__c.field-meta.xml
<CustomField>
    <fullName>Reg_Time__c</fullName>
    <label>Reg Time</label>
    <type>DateTime</type>
</CustomField>