force-app/main/default/objects/ON24_Webinar_Attendance__c/fields/SetterID__c.field-meta.xml
<CustomField>
    <fullName>SetterID__c</fullName>
    <label>SetterID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>